# Elegant-Game-Engine

./: CMakeLists.txt  README.md  SECURITY.md
Editor/: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Base/: CMakeLists.txt
Engine/Base/Tests/: TestAssert.cpp
Engine/Base/include/: Base.hpp  BaseConfig.h  MathUtils.hpp
Engine/Base/src/: Base.cpp
Engine/Engine-Libraries/core/Math/: math_definitions.h  math_functions.h
Engine/Managers/: CMakeLists.txt
Engine/Managers/include/: GameLoop.hpp
Engine/Managers/src/: GameLoop.cpp
Engine/Memory/: CMakeLists.txt
Engine/Modules/Graphics/: CMakeLists.txt
Engine/Tools/: CMakeLists.txt
Engine/Utility/: CMakeLists.txt
Engine/Utility/include/: Timer.hpp
Engine/Utility/src/: Logger.cpp  Timer.cpp
docs/: index.html  main.css
src/: main.cpp
util/: config.h
